pluma_parser/tests/snapshots/parse_success__type_trait_mix_fields_and_methods.snap
---
source: pluma_parser/tests/parse_success.rs
expression: "trait WowieWithName\n  . getWow () -> Wow\n  . setWow Wow -> ()\n  . name :: String"
---

=== Source ===
trait WowieWithName
  . getWow () -> Wow
  . setWow Wow -> ()
  . name :: String

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        0,
        80,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                0,
                80,
            ),
            kind: TypeDef(
                TypeDefNode {
                    pos: (
                        0,
                        80,
                    ),
                    visibility: Public,
                    kind: Trait {
                        fields: [
                            (
                                IdentifierNode {
                                    pos: (
                                        66,
                                        70,
                                    ),
                                    name: "name",
                                },
                                TypeExprNode {
                                    pos: (
                                        74,
                                        80,
                                    ),
                                    kind: Single(
                                        TypeIdentifierNode {
                                            pos: (
                                                74,
                                                80,
                                            ),
                                            name: "String",
                                            generics: [],
                                            constraints: None,
                                        },
                                    ),
                                    typ: Unknown,
                                },
                            ),
                        ],
                        methods: [
                            (
                                [
                                    (
                                        IdentifierNode {
                                            pos: (
                                                24,
                                                30,
                                            ),
                                            name: "getWow",
                                        },
                                        TypeExprNode {
                                            pos: (
                                                31,
                                                33,
                                            ),
                                            kind: EmptyTuple,
                                            typ: Unknown,
                                        },
                                    ),
                                ],
                                TypeExprNode {
                                    pos: (
                                        37,
                                        40,
                                    ),
                                    kind: Single(
                                        TypeIdentifierNode {
                                            pos: (
                                                37,
                                                40,
                                            ),
                                            name: "Wow",
                                            generics: [],
                                            constraints: None,
                                        },
                                    ),
                                    typ: Unknown,
                                },
                            ),
                            (
                                [
                                    (
                                        IdentifierNode {
                                            pos: (
                                                45,
                                                51,
                                            ),
                                            name: "setWow",
                                        },
                                        TypeExprNode {
                                            pos: (
                                                52,
                                                55,
                                            ),
                                            kind: Single(
                                                TypeIdentifierNode {
                                                    pos: (
                                                        52,
                                                        55,
                                                    ),
                                                    name: "Wow",
                                                    generics: [],
                                                    constraints: None,
                                                },
                                            ),
                                            typ: Unknown,
                                        },
                                    ),
                                ],
                                TypeExprNode {
                                    pos: (
                                        59,
                                        61,
                                    ),
                                    kind: EmptyTuple,
                                    typ: Unknown,
                                },
                            ),
                        ],
                    },
                    name: TypeIdentifierNode {
                        pos: (
                            6,
                            19,
                        ),
                        name: "WowieWithName",
                        generics: [],
                        constraints: None,
                    },
                    generic_type_constraints: [],
                },
            ),
        },
    ],
}

