pluma_parser/tests/snapshots/parse_success__type_trait_same_line_one_field.snap
---
source: pluma_parser/tests/parse_success.rs
expression: "trait HasName . name :: String"
---

=== Source ===
trait HasName . name :: String

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        0,
        30,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                0,
                30,
            ),
            kind: TypeDef(
                TypeDefNode {
                    pos: (
                        0,
                        30,
                    ),
                    visibility: Public,
                    kind: Trait {
                        fields: [
                            (
                                IdentifierNode {
                                    pos: (
                                        16,
                                        20,
                                    ),
                                    name: "name",
                                },
                                TypeExprNode {
                                    pos: (
                                        24,
                                        30,
                                    ),
                                    kind: Single(
                                        TypeIdentifierNode {
                                            pos: (
                                                24,
                                                30,
                                            ),
                                            name: "String",
                                            generics: [],
                                            constraints: None,
                                        },
                                    ),
                                    typ: Unknown,
                                },
                            ),
                        ],
                        methods: [],
                    },
                    name: TypeIdentifierNode {
                        pos: (
                            6,
                            13,
                        ),
                        name: "HasName",
                        generics: [],
                        constraints: None,
                    },
                    generic_type_constraints: [],
                },
            ),
        },
    ],
}

